--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -2,4 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+}
+img{
+  max-width: 100%;
 }
