--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,47 +1,59 @@
-body{
-    background-image: url(../images/bg-desktop.svg);
+body {
+    min-height: 100vh;
+    padding: 20px;
+    background: url(../images/bg-desktop.svg);
     background-color: hsl(257, 40%, 49%);
+    color: white;
 }
 
-header{
+header {
     display: flex;
-    margin: 50px;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+header .fa-comment-dots{
+    font-size: 36px;
+}
+
+header h2{
     font-family: "Poppins", sans-serif;
     font-weight: 600;
-    align-items: center;
-    gap: 5px;
-    color: white;
+    font-size: 36px;
 }
 
-.fa-comment-dots {
-    font-size: 24px;}
-
-main{
+main {
     display: flex;
-    color: white;
-    font-family: "Open Sans", sans-serif;
+    gap: 40px;
+    max-width: 1200px;
+    margin: 30px auto auto 100px;
 }
 
 main div{
     width: 50%;
-    margin-left: 47.5px;
-}
-
-main div img{
-    width: 90%;
-    height: 90%;
 }
 
 main section{
     width: 50%;
 }
 
+main div img{
+    width: 709px;
+    height: 506px;
+}
+
 main section h2{
+    font-family: "Poppins", sans-serif;
     font-weight: 600;
+    font-size: 36px;
+    margin-top: 50px;
 }
 
 main section p{
+    font-family: "Open Sans", serif;
     font-weight: 400;
+    margin-top: 30px;
 }
 
 main section button{
@@ -49,4 +61,32 @@ main section button{
     padding: 10px 50px;
     border-radius: 20px;
     border-style: none;
+    margin-top: 30px;
+    transition: 0.3s;
+}
+
+main section button:hover{
+    color: white;
+    background-color: hsl(300, 69%, 71%);
+}
+
+footer {
+    display: flex;
+    gap: 20px;
+    float: right;
+    margin-right: 15%;
+}
+
+footer a{
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 13px;
+    transition: 0.3s;
+}
+
+footer a:hover{
+    color: hsl(300, 69%, 71%);
+    border: 1px solid hsl(300, 69%, 71%);
 }
